udp-filter (0.2.5) stable; urgency=low

  * Using libcidr for IP address filtering.
  * Calling GeoIP_set_charset instead of _iso_8859_1__utf8 to get geocoded results in UTF8.

 -- Andrew Otto (Wikimedia Foundation) <otto@wikimedia.org>  Mon, 13 Jul 2012 15:30:00 -0500

udp-filter (0.2.4) stable; urgency=low

  * Added --http-status option to filter by HTTP response code.
  * This version was written by Andrew Otto (aotto@wikimedia.org)

 -- Diederik van Liere (Wikimedia Foundation) <dvanliere@wikimedia.org>  Mon, 21 May 2012 17:44:20 -0500

udp-filter (0.2.3) stable; urgency=low

  * Modified behavior of -n --num_fields.  This is now -n --min-field-count.
    There must me more fields in a line than this, otherwise the line will
    be discarded.  The default is 14.  This was done so that we may add
    new fields to the log lines without needing to recompile and redeploy
    in use udp filters at the same time.
  * Changed --country_list to --country-list (with hyphen) to be more
    consistent with usual command line option conventions.
  * This version was written by Andrew Otto (aotto@wikimedia.org)

 -- Diederik van Liere (Wikimedia Foundation) <dvanliere@wikimedia.org>  Mon, 21 May 2012 17:42:30 -0500

udp-filter (0.2.2) stable; urgency=low

  * Tim rewrote append_char function Removed exotic for/loop Replaced all 
    strtok with strchr.
  * Version 0.2: - IP Filtering - Geocoding at country, region, city and 
    latlon level - Fixed memory leaks - Roan is a hero
  * Added longitude / latitude geocoding.
  * Removed OS specific build file.
  * Improvements:
  * Added full support for ip address and ip range filtering Added full 
    support for regular expression matching Incorporated feedback from Tim, 
    still struggling 
  * Adding ip-filtering support (not working)
  * Check if country codes are valid and finish renaming stuff
  * Originally, this was udp.c, renamed to increase consistency.