@@ -3,5 +3,5 @@ aclocal
 autoconf
 autoreconf
 
-./configure CPPFLAGS=-DDEBUG CFLAGS="-g3 -O0 -Wall -pedantic"
+./configure CPPFLAGS=-DDEBUG CFLAGS="-g3 -O0 -Wall -pedantic"  $@
 
