@@ -1,0 +1,17 @@
+Source: udp-filter
+Section: utils
+Priority: extra
+Maintainer: Diederik van Liere <dvanliere@wikimedia.org>
+Build-Depends: debhelper (>= 7), autotools-dev, libgeoip1, libgeoip-dev, libcidr1, libcidr1-dev, mime-support, mawk
+Standards-Version: 3.8.3
+Vcs-Git: git://gerrit.wikimedia.org:29416/analytics/udp-filters.git
+Vcs-Browser: https://gerrit.wikimedia.org/r/gitweb?p=analytics/udp-filters.git
+Homepage: http://www.mediawiki.org/wiki/Analytics/UDP-filters
+
+Package: udp-filter
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libcidr1, libgeoip1
+Description: Parses webserver access log lines and filters and transforms them.
+ Wikimedia has a udp logger that sends packets from the webservers containing access logs.
+ udp-filter allows you to configure a filter and write particular pageviews, based on a
+ combination of domain and url matching, to a logfile. It also offers geocoding and anonymization of ip addresses.
