@@ -1,0 +1,3 @@
+usr/bin/udp-filter
+usr/share/doc/udp-filter/*
+usr/share/man/man1/udp-filter.1.gz
